# psychopy-visionscience

./: .gitignore  CHANGELOG.txt  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: publish.yaml
docs/: index.html  objects.inv  searchindex.js
docs/.doctrees/: download.doctree  environment.pickle  index.doctree
docs/.doctrees/builder/components/: EnvGratingComponent.doctree  NoiseStimComponent.doctree  RadialStimComponent.doctree
docs/.doctrees/coder/: EnvelopeGrating.doctree  NoiseStim.doctree  RadialStim.doctree
docs/_modules/: index.html
docs/_modules/psychopy_visionscience/noise/: index.html
docs/_modules/psychopy_visionscience/radial/: index.html
docs/_modules/psychopy_visionscience/secondorder/: index.html
docs/_sources/: download.rst.txt  index.rst.txt
docs/_sources/builder/components/: NoiseStimComponent.rst.txt  RadialStimComponent.rst.txt
docs/_sources/coder/: EnvelopeGrating.rst.txt
docs/builder/components/EnvGratingComponent/: index.html
docs/builder/components/NoiseStimComponent/: index.html
docs/builder/components/RadialStimComponent/: index.html
docs/coder/EnvelopeGrating/: index.html
docs/coder/NoiseStim/: index.html
docs/coder/RadialStim/: index.html
docs/download/: index.html
docs/genindex/: index.html
docs/search/: index.html
docs_mkdocs/: index.md
docs_mkdocs/api/: index.md  noise.md  radial.md  secondorder.md
docs_mkdocs/api/components/: index.md
docs_mkdocs/api/components/envelopegrating/: index.md
docs_mkdocs/api/components/noise/: index.md
docs_mkdocs/api/components/radial/: index.md
docs_mkdocs/api/tests/: index.md
docs_mkdocs/api/tests/test_experiment/: index.md  test_components.md  test_params.md
docs_mkdocs/api/tests/test_visual/: index.md  test_all_stimuli.md
docs_mkdocs/builder/components/: EnvGratingComponent.md  NoiseStimComponent.md  RadialStimComponent.md
docs_mkdocs/coder/: EnvelopeGrating.md  NoiseStim.md  RadialStim.md
docs_mkdocs/style/: psychopy.css
docs_sphinx/builder/components/: EnvGratingComponent.rst
docs_sphinx/coder/: EnvelopeGrating.rst  NoiseStim.md  RadialStim.rst
docs_src/coder/: EnvelopeGrating.rst  NoiseStim.rst  RadialStim.rst
psychopy_visionscience/: __init__.py  noise.py  radial.py  secondorder.py
psychopy_visionscience/components/: __init__.py
psychopy_visionscience/components/envelopegrating/: __init__.py
psychopy_visionscience/components/noise/: __init__.py
psychopy_visionscience/components/radial/: __init__.py
psychopy_visionscience/tests/test_experiment/: test_components.py  test_params.py
psychopy_visionscience/tests/test_visual/: test_all_stimuli.py
tests/test_builder/: test_EnvGratingComponent.py  test_NoiseComponent.py  test_RadialStimComponent.py
tests/test_coder/: test_all_stimuli.py
