[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "psychopy-visionscience"
version = "0.0.4"
description = "Stimuli useful for vision scientists."
readme = "README.md"
requires-python = ">= 3.7"
license = { text = "GNU General Public License v3 (GPLv3)" }
authors = [
  { name = "Jon Peirce", email = "jon@opensceincetools.org" },
  { name = "Matthew Cutone", email = "mcutone@opensceincetools.org" },
]
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
]
urls.homepage = "https://github.com/mdcutone/psychopy-visionscience"
urls.changelog = "https://github.com/mdcutone/psychopy-visionscience/blob/main/CHANGELOG.txt"
urls.documentation = "https://pages.github.com/psychopy/psychopy-visionscience"
urls.repository = "https://github.com/psychopy/psychopy-visionscience"
dependencies = [
]

[tool.setuptools.packages.find]
where = ["", "psychopy_visionscience",]

[tool.setuptools.package-data]
"*" = ["*.png",]

[project.entry-points."psychopy.experiment.components"]
NoiseStimComponent = "psychopy_visionscience:NoiseStimComponent"
EnvGratingComponent = "psychopy_visionscience:EnvGratingComponent"
RadialStimComponent = "psychopy_visionscience:RadialStimComponent"